version 1.0.6
- fix a couple of minor gretlcli bugs
- minor adjustment to model print output formatting
- fix for correlogram graph (was incompatible with older gnuplot)

02/20/03 version 1.0.5
- fix missing translations; fix build of rpm
- add support for Gujarati textbook data files

02/19/03 version 1.0.4
- add sst() function in genr for Total Sum of Squares of a 
  variable
- fix bug in genr: a long genr command could overflow the space
  allocated for variable labels
- fix bugs in graphing: "non-standard" graphs could cause problems
  including crashes
- fix bug in coefficient printing: sometimes values were being
  truncated at 5 figures
- when dataset is sub-sampled, add dialog offering option to
  restore full data range before saving data
- add recognition of environment variables GRETL_PNG_GRAPH_FONT
  and GRETL_PNG_GRAPH_FONT_SIZE (e.g. "verdana" and "8") for
  generation of PNG graphs when gnuplot is linked to gd, and
  gd has TrueType font support enabled
- The sample data files selector and practice scripts selector
  now offer a tabbed collection of the available sets of files,
  and the associated menu items are simplified
- Replace Box-Pierce statistic with Ljung-Box throughout, and
  revamp the correlogram graph
- Add several configuration options to the tramo/seats plugin
- update libtool to 1.4.3 and autoreconf
- raise library revision number to 4

02/04/03 version 1.0.3
- Add PNG graphs to win32 version, and standardize on PNG graphs for
  all display including graph editing
- Add facility to identify labeled data-points in a scatter plot
- further fix to pathnames with .Rprofile for win32
- LaTeX view: fix for dvi file living in a directory with
  spaces in its name on win32
- Add option to copy as LaTeX or RTF for the various "Model data"
  windows (e.g. forecasts with standard errors)
- Reorganize management of win32 registry entries
- Add tramo/seats for win32 version, and make tramo support the
  default for Linux